Remove the ability for the jobstore to support multiple databases with differing sql syntax